force-app/main/default/objects/Product_Team_Member_Type__mdt/Product_Team_Member_Type__mdt.object-meta.xml
<CustomObject>
    <description>CMDT holds the possible product team member types, which will be used for creating Product Team Member records</description>
    <label>Product Team Member Type</label>
    <pluralLabel>Product Team Member Types</pluralLabel>
</CustomObject>