force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/IsSOQL__c.field-meta.xml
<CustomField>
    <fullName>IsSOQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSOQL</label>
    <type>Checkbox</type>
</CustomField>