force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/MemberTypeLookupField__c.field-meta.xml
<CustomField>
    <fullName>MemberTypeLookupField__c</fullName>
    <label>MemberTypeLookupField</label>
    <length>30</length>
    <type>Text</type>
</CustomField>