force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/ObjectIcon__c.field-meta.xml
<CustomField>
    <fullName>ObjectIcon__c</fullName>
    <label>ObjectIcon</label>
    <length>30</length>
    <type>Text</type>
</CustomField>