force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>