force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/ObjectTypeLabel__c.field-meta.xml
<CustomField>
    <fullName>ObjectTypeLabel__c</fullName>
    <label>ObjectTypeLabel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>