force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/QueryFields__c.field-meta.xml
<CustomField>
    <fullName>QueryFields__c</fullName>
    <label>QueryFields</label>
    <length>30</length>
    <type>Text</type>
</CustomField>