force-app/main/default/objects/Product_Team_Member_Type__mdt/fields/SearchCondition__c.field-meta.xml
<CustomField>
    <fullName>SearchCondition__c</fullName>
    <label>SearchCondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>